refactor models, add route to get hot pizzas
