# api/controllers/PizzaController.js
@@ -78,10 +78,23 @@ const deletePizzaById = async (req, res) => {
     }
 };
 
+const getTopPizzas = async (req, res) => {
+    try {
+        const topPizzas = await PizzaModel.find()
+            .sort({ orderCount: -1 }) // Sort in descending order of orderCount
+            .limit(5); // Limit the result to the top 5 pizzas
+
+        res.status(200).json(topPizzas);
+    } catch (error) {
+        res.status(500).json({ error: 'Failed to fetch top pizzas' });
+    }
+};
+
 module.exports = {
     getAllPizzas,
     getPizzaById,
     createPizza,
     updatePizzaById,
-    deletePizzaById
+    deletePizzaById,
+    getTopPizzas
 };
