# api/swagger-output.json
@@ -518,6 +518,19 @@
         }
       }
     },
+    "/pizzas/hot": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/pizzas/{id}": {
       "get": {
         "description": "",
